# BMI

./: .gitignore  README.md  bmi.py  bmi_console.py  plot_bmi_history.py  pyproject.toml  requirements.txt  translations.py
.github/workflows/: ci.yml
tests/: test_bmi.py  test_console.py  test_main_integration.py  test_plot_history.py  test_recent.py  test_storage_and_names.py  test_table.py  test_translations.py  test_trend.py
